// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments<Comment> with replies renders correctly 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  delayLongPress={600}
  extraButtonProps={
    Object {
      "rippleColor": "transparent",
    }
  }
  onPress={[Function]}
>
  <View
    style={
      Object {
        "alignItems": "stretch",
        "flex": 1,
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": 60,
        }
      }
    >
      <Badge
        left={35}
        number={1}
      />
      <View>
        <Image
          source={
            Object {
              "testUri": "../../../app/assets/images/profile-pic-may.jpg",
            }
          }
          style={
            Object {
              "backgroundColor": "rgba(4, 71, 47, 0.75)",
              "borderRadius": 25,
              "height": 50,
              "overflow": "hidden",
              "width": 50,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginBottom": 10,
          "marginLeft": 10,
        }
      }
    >
      <Title
        text="Meu pai fez o que ela mandou…"
      />
      <Text
        style={
          Object {
            "color": "rgb(51, 51, 51)",
            "fontStyle": "italic",
            "marginBottom": 10,
          }
        }
      >
        Há 20 horas
      </Text>
      <Text
        style={
          Object {
            "flex": 1,
            "flexWrap": "nowrap",
          }
        }
      >
        Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.
      </Text>
    </View>
  </View>
</TouchableOpacity>
`;

exports[`Comments<Comment> without replies renders correctly 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  delayLongPress={600}
  extraButtonProps={
    Object {
      "rippleColor": "transparent",
    }
  }
  onPress={[Function]}
>
  <View
    style={
      Object {
        "alignItems": "stretch",
        "flex": 1,
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": 60,
        }
      }
    >
      <Badge
        left={35}
        number={0}
      />
      <View>
        <Image
          source={
            Object {
              "testUri": "../../../app/assets/images/profile-pic-may.jpg",
            }
          }
          style={
            Object {
              "backgroundColor": "rgba(4, 71, 47, 0.75)",
              "borderRadius": 25,
              "height": 50,
              "overflow": "hidden",
              "width": 50,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginBottom": 10,
          "marginLeft": 10,
        }
      }
    >
      <Title
        text="Meu pai fez o que ela mandou…"
      />
      <Text
        style={
          Object {
            "color": "rgb(51, 51, 51)",
            "fontStyle": "italic",
            "marginBottom": 10,
          }
        }
      >
        Há 9 minutos
      </Text>
      <Text
        style={
          Object {
            "flex": 1,
            "flexWrap": "nowrap",
          }
        }
      >
        Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.
      </Text>
    </View>
  </View>
</TouchableOpacity>
`;
